<resources>
    <string name="app_name">NotesApp_XML</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_first_note">Create your first note !</string>
    <string name="notes">Notes</string>
    <string name="todo">TODO</string>
    <string name="todon">TODO</string>
    <string name="todoe">TODO</string>
    <string name="todos">TODO</string>
    <string name="file_not_found_try_searching_again">File not found. Try searching again.</string>
    <string name="todob">TODO</string>
</resources>